[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/ButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/menuItem.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/optionsmenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/optionsfont.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[node name="OptionsMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 113
custom_constants/margin_left = 200
custom_constants/margin_bottom = 113
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="PanelContainer" parent="."]
margin_left = 200.0
margin_top = 113.0
margin_right = 1080.0
margin_bottom = 607.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_left = 7.0
margin_top = 7.0
margin_right = 873.0
margin_bottom = 487.0
rect_min_size = Vector2( 866, 480 )
custom_constants/margin_top = 56

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_top = 56.0
margin_right = 866.0
margin_bottom = 480.0
size_flags_vertical = 5

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 866.0
margin_bottom = 40.0
theme = ExtResource( 1 )
text = "AUDIO"
align = 1

[node name="Audio" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 866.0
margin_bottom = 332.0
size_flags_horizontal = 5
size_flags_vertical = 6

[node name="Master" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/Audio"]
margin_left = 46.0
margin_right = 166.0
margin_bottom = 247.0
size_flags_horizontal = 6

[node name="Master" type="VSlider" parent="Background/MarginContainer/VBoxContainer/Audio/Master"]
margin_left = 52.0
margin_right = 68.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
tick_count = 20

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/Audio/Master"]
margin_top = 204.0
margin_right = 120.0
margin_bottom = 224.0
theme = SubResource( 1 )
text = "Master"

[node name="Ambience" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/Audio"]
margin_left = 244.0
margin_right = 404.0
margin_bottom = 247.0
size_flags_horizontal = 6

[node name="Ambience" type="VSlider" parent="Background/MarginContainer/VBoxContainer/Audio/Ambience"]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
tick_count = 20

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/Audio/Ambience"]
margin_top = 204.0
margin_right = 160.0
margin_bottom = 224.0
theme = ExtResource( 2 )
text = "Ambience"

[node name="Effects" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/Audio"]
margin_left = 471.0
margin_right = 611.0
margin_bottom = 247.0
size_flags_horizontal = 6

[node name="Effects" type="VSlider" parent="Background/MarginContainer/VBoxContainer/Audio/Effects"]
margin_left = 62.0
margin_right = 78.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
tick_count = 20

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/Audio/Effects"]
margin_top = 204.0
margin_right = 140.0
margin_bottom = 247.0
theme = ExtResource( 2 )
text = "Sound
Effects"

[node name="Music" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/Audio"]
margin_left = 709.0
margin_right = 809.0
margin_bottom = 247.0
size_flags_horizontal = 6

[node name="Music" type="VSlider" parent="Background/MarginContainer/VBoxContainer/Audio/Music"]
margin_left = 42.0
margin_right = 58.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
tick_count = 20

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/Audio/Music"]
margin_top = 204.0
margin_right = 100.0
margin_bottom = 224.0
theme = ExtResource( 2 )
text = "Music"

[node name="Button" type="Button" parent="Background/MarginContainer/VBoxContainer"]
margin_left = 347.0
margin_top = 378.0
margin_right = 519.0
margin_bottom = 424.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "BACK"

[connection signal="value_changed" from="Background/MarginContainer/VBoxContainer/Audio/Master/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/VBoxContainer/Audio/Ambience/Ambience" to="." method="_on_Ambience_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/VBoxContainer/Audio/Effects/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/VBoxContainer/Audio/Music/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
